# manim-weighted-line

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: examples.py
src/manim_weighted_line/: __init__.py  weighted_line.py
